bugfix LecacyApiController V1